# LatentLedger

./: DATA.md  data_utils.py  diagnostics.py  losses.py  main.py  preprocessing.py  pyproject.toml
models/: __init__.py  jepa.py
scripts/: download_data.py  train_jepa.py  validate_jepa.py
