[project]
name = "latentledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pytorch-lifestream>=0.7.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "wandb>=0.18.0",
    "tqdm>=4.67.3",
]
